feat: sidebar z index fix header zone b

--- a/themes/the-arkr-manual/static/css/variables.css
+++ b/themes/the-arkr-manual/static/css/variables.css
@@ -29,6 +29,7 @@
   /* Z-index Layers */
   --z-background: -1;
   --z-content: 1;
+  --z-header: 10; /* Sticky headers - above content, below sidebar */
   --z-sidebar: 100;
   --z-overlay: 200;
   --z-controls: 1000;
