--- a/themes/the-arkr-manual/static/css/header.css
+++ b/themes/the-arkr-manual/static/css/header.css
@@ -122,7 +122,7 @@
 .header-zone-b {
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: var(--z-header);
   width: 100%;
   min-height: var(--zone-b-height);
   background-color: var(--bg-secondary);
