feat: title link to home

--- a/themes/the-arkr-manual/layouts/baseof.html
+++ b/themes/the-arkr-manual/layouts/baseof.html
@@ -82,7 +82,9 @@
             <p class="site-author">Written and illustrated by <a href="https://arkr.ca" class="author-link" target="_blank" rel="noopener noreferrer">Anish Reddy</a>.</p>
           </div>
           <div class="zone-a-right">
-            <h1 class="site-title">THE ARKR MANUAL</h1>
+            <h1 class="site-title">
+              <a href="{{ "/" | relURL }}" class="site-title-link">THE ARKR MANUAL</a>
+            </h1>
           </div>
         </header>
         
