--- a/themes/the-arkr-manual/static/css/header.css
+++ b/themes/the-arkr-manual/static/css/header.css
@@ -60,6 +60,19 @@
   -webkit-text-stroke: 2px var(--text-secondary);
 }
 
+.site-title-link {
+  color: inherit;
+  text-decoration: none;
+  display: inline-block;
+  transition: opacity 0.2s ease;
+}
+
+.site-title-link:focus {
+  outline: 2px solid var(--accent);
+  outline-offset: 4px;
+  border-radius: 2px;
+}
+
 .site-description {
   font-family: 'IBM Plex Serif', serif;
   font-size: 0.875rem;
