feat: markdown rendering

--- a/themes/the-arkr-manual/layouts/baseof.html
+++ b/themes/the-arkr-manual/layouts/baseof.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="{{ "css/main.css" | relURL }}">
   <link rel="stylesheet" href="{{ "css/layout.css" | relURL }}">
   <link rel="stylesheet" href="{{ "css/header.css" | relURL }}">
+  <link rel="stylesheet" href="{{ "css/markdown.css" | relURL }}">
   <link rel="stylesheet" href="{{ "css/components/dark_starfield_bg.css" | relURL }}">
   <link rel="stylesheet" href="{{ "css/components/light_grid_bg.css" | relURL }}">
   
@@ -122,5 +123,7 @@
   <script src="{{ "js/sound.js" | relURL }}"></script>
   <script src="{{ "js/sidebar.js" | relURL }}"></script>
   <script src="{{ "js/main.js" | relURL }}"></script>
+  <script src="{{ "js/code-copy.js" | relURL }}"></script>
+  <script src="{{ "js/image-captions.js" | relURL }}"></script>
 </body>
 </html>
