feat: email component unstable v0.1

--- a/themes/the-arkr-manual/layouts/baseof.html
+++ b/themes/the-arkr-manual/layouts/baseof.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="{{ "css/markdown.css" | relURL }}">
   <link rel="stylesheet" href="{{ "css/components/dark_starfield_bg.css" | relURL }}">
   <link rel="stylesheet" href="{{ "css/components/light_grid_bg.css" | relURL }}">
+  <link rel="stylesheet" href="{{ "css/components/email-signup.css" | relURL }}">
   
   <!-- Apply theme immediately before body renders -->
   <script>
