--- a/themes/the-arkr-manual/layouts/_partials/sidebar.html
+++ b/themes/the-arkr-manual/layouts/_partials/sidebar.html
@@ -1,25 +1,19 @@
 {{- /*
   Sidebar Table of Contents
   Iterates through all sections (chapters) and their pages (articles)
-  Filters out draft articles from ToC in production mode
-  Shows all articles (including drafts) in dev mode
+  Shows all articles (including drafts) in both dev and prod mode
+  Draft articles appear in ToC but show placeholder content when viewed
   Sorts by weight
   Applies active state to current page
 */ -}}
 
 <nav class="sidebar-nav" aria-label="Table of Contents">
   {{- $currentPage := . -}}
-  {{- $env := getenv "HUGO_ENV" | default "prod" -}}
-  {{- $isDev := eq $env "dev" -}}
   {{- $sections := site.Sections -}}
   
   {{- range $sections.ByWeight -}}
     {{- $section := . -}}
     {{- $pages := .RegularPages -}}
-    {{- if not $isDev -}}
-      {{- /* Filter out drafts in production mode */ -}}
-      {{- $pages = where $pages "Draft" "ne" true -}}
-    {{- end -}}
     
     {{- if gt (len $pages) 0 -}}
       <div class="sidebar-chapter">
