--- a/layouts/shortcodes/email-signup.html
+++ b/layouts/shortcodes/email-signup.html
@@ -4,7 +4,7 @@
     <input 
       type="email" 
       name="email" 
-      placeholder="Enter your email" 
+      placeholder="> enter your email" 
       required 
       class="email-input"
       aria-label="Email address"
