feat: email input

--- a/themes/the-arkr-manual/layouts/shortcodes/email-signup.html
+++ b/themes/the-arkr-manual/layouts/shortcodes/email-signup.html
@@ -1,5 +1,5 @@
 <div class="email-signup-component">
-  <p class="email-signup-text">I'll email you when a new article drops. No spam. No ads.</p>
+  <p class="email-signup-text">I'll email you when a new article drops.</p>
   <form class="email-signup-form" action="/submit.php" method="POST">
     <input 
       type="email" 
@@ -8,9 +8,10 @@
       required 
       class="email-input"
       aria-label="Email address"
+      autocomplete="email"
     >
     <button type="submit" class="email-submit-button">
-      <span class="button-text">JOIN THE MANUAL</span>
+      <span class="button-text">SUBMIT</span>
     </button>
   </form>
 </div>
